# AStarFlipDistance

./: CMakeLists.txt  README.md
data/: purge.py
data/evaluation/: evaluation_notebook.ipynb
data/random_experiments_paper/n_15/: results_bfs.csv  results_combined.csv  results_eppstein.csv  results_heuristic.csv  results_ilp.csv  results_rootcombined.csv  results_simple.csv
data/random_experiments_paper/n_15/set_0/: points  results_bfs.csv  results_combined.csv  results_eppstein.csv  results_heuristic.csv  results_ilp.csv  results_rootcombined.csv  results_simple.csv
data/random_experiments_paper/n_15/set_1/: points  results_bfs.csv  results_combined.csv  results_eppstein.csv  results_heuristic.csv  results_ilp.csv  results_rootcombined.csv  results_simple.csv
data/random_experiments_paper/n_15/set_2/: points  results_bfs.csv  results_combined.csv  results_eppstein.csv  results_heuristic.csv  results_ilp.csv  results_rootcombined.csv  results_simple.csv
data/random_experiments_paper/n_15/set_3/: points  results_bfs.csv  results_combined.csv  results_eppstein.csv  results_heuristic.csv  results_ilp.csv  results_rootcombined.csv  results_simple.csv
data/random_experiments_paper/n_15/set_4/: points  results_bfs.csv  results_combined.csv  results_eppstein.csv  results_heuristic.csv  results_ilp.csv  results_rootcombined.csv  results_simple.csv
data/random_experiments_paper/n_15/set_5/: points  results_bfs.csv  results_combined.csv  results_eppstein.csv  results_heuristic.csv  results_ilp.csv  results_rootcombined.csv  results_simple.csv
data/random_experiments_paper/n_15/set_6/: points  results_bfs.csv  results_combined.csv  results_eppstein.csv  results_heuristic.csv  results_ilp.csv  results_rootcombined.csv  results_simple.csv
data/random_experiments_paper/n_15/set_7/: points  results_bfs.csv  results_combined.csv  results_eppstein.csv  results_heuristic.csv  results_ilp.csv  results_rootcombined.csv  results_simple.csv
data/random_experiments_paper/n_15/set_8/: points  results_bfs.csv  results_combined.csv  (+5 more)
data/random_experiments_paper/n_20/: results_bfs.csv  results_combined.csv  results_eppstein.csv  results_heuristic.csv  results_ilp.csv  results_rootcombined.csv  results_simple.csv
data/random_experiments_paper/n_25/: results_bfs.csv  results_combined.csv  results_eppstein.csv  results_heuristic.csv  results_ilp.csv  results_rootcombined.csv  results_simple.csv
data/random_experiments_paper/n_30/: results_bfs.csv  results_combined.csv  results_eppstein.csv  results_heuristic.csv  results_ilp.csv  results_rootcombined.csv  results_simple.csv
data/random_hod_experiments_paper/: results_decomposition.csv
include/AStarFlipDistance/: AStarDecompositionFlipDistance.hpp  AStarFlipDistance.hpp  BasicDataStructures.hpp  BiDirectionalBfs.hpp  CombinatorialDelaunayTriangulation.hpp  Decomposer.hpp  FastEppsteinHeuristic.hpp  FastHankeHeuristic.hpp  FlipIlp.hpp  FlipIlpEdgeBased.hpp  FlipIlpQuadBased.hpp  FlipIlpTrianglebased.hpp  GeometricObjects.hpp  GeometricTriangulation.hpp  Geometry.hpp  Global.hpp  HeuristicDistanceCalculator.hpp  HigherOrderDelaunayObjects.hpp  HungarianPrimDual.hpp  ListHandler.hpp  OuterBiConnectedComponentFinder.hpp  SimpleMaxHeap.hpp  StaticTriangulation.hpp  TriangulationHandler.hpp
src/: AStarDecompositionFlipDistance.cpp  AStarFlipDistance.cpp  BiDirectionalBfs.cpp  CombinatorialDelaunayTriangulation.cpp  Decomposer.cpp  FastEppsteinHeuristic.cpp  FastHankeHeuristic.cpp  GeometricObjects.cpp  Geometry.cpp  HeuristicDistanceCalculater.cpp  HungarianPrimDual.cpp  ListHandler.cpp  OuterBiConnectedComponentFinder.cpp  SimpleMaxHeap.cpp  StaticTriangulation.cpp  TriangulationHandler.cpp  main.cpp  main_with_path.cpp
(+2400 files in other folders)
